<resources>
    <string name="app_name">Quick! Owner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Quick! for Owner</string>
    <string name="title_trends">Trends</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="premise_status">Premise Status</string>
    <string name="_100">100%</string>
    <string name="hostUrl">https://aesuneus.000webhostapp.com/qservice.php</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="loginFail">Failed to login.</string>
    <string name="userIntentName">user</string>
    <string name="registerButton">Register</string>
    <string name="open_map">Open Map</string>
    <string name="address">Address</string>
    <string name="premise_name">Premise Name</string>
    <string name="premise_information">Premise Information</string>
    <string name="owner_information">Owner Information</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="leave_blank_if_closed_the_whole_day">Click text to edit. Leave blank if closed the whole day</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="closed">Closed</string>
    <string name="fullday">24 hours</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="max_occupancy">Max occupancy</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="timeFormat">%02d:%02d</string>
    <string name="mode_weekly">WEEKLY</string>
    <string name="mode_daily">DAILY</string>
    <string name="capacity_format">Capacity currently at: %d/%d</string>
    <string name="last_updated_on">Last updated on: </string>
    <string name="override_not_applied">Override is not applied</string>
    <string name="override_is_applied">Override is applied</string>
    <string name="open_cap">OPEN</string>
    <string name="closed_cap">CLOSED</string>
    <string name="percentage_format">%d%%</string>
    <string name="edit_place_information">Edit place information</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>
    <string name="messageTextHint">Enter message or promotion to send.</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="previously_sent_notification">Previously sent notification.</string>
    <string name="swipe_left_to_delete_right_to_send_again">Swipe left to delete, right to send again.</string>
    <string name="usual_occupancy_graph">Usual Occupancy Graph</string>
    <string name="mode">Mode:</string>
    <string-array name="modeArray">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
</resources>
